force-app/main/default/objects/AegisMetricsObjectMonitor__c/AegisMetricsObjectMonitor__c.object-meta.xml
<CustomObject>
    <description>Object to control Salesforce monitoring events to ingest to CRM Analytics</description>
    <label>Aegis Metrics Object Monitor</label>
    <nameField>
        <label>AegisMetricsObjectMonitor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Aegis Metrics Objects Monitor</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>