force-app/main/default/objects/AegisMetricsObjectMonitor__c/fields/Default_Event__c.field-meta.xml
<CustomField>
    <fullName>Default_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Define if event type is default by event monitoring application.</description>
    <inlineHelpText>If event is default by event monitoring, this field is True otherwise is False.</inlineHelpText>
    <label>Default Event</label>
    <type>Checkbox</type>
</CustomField>