force-app/main/default/objects/AegisMetricsObjectMonitor__c/fields/Enabled_To_Admin__c.field-meta.xml
<CustomField>
    <fullName>Enabled_To_Admin__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Define if Aegis app admin can edit the event type</description>
    <inlineHelpText>Aegis admin can edit event</inlineHelpText>
    <label>Enabled To Admin</label>
    <type>Checkbox</type>
</CustomField>