force-app/main/default/objects/AegisMetricsObjectMonitor__c/fields/Enabled_To_Ingest__c.field-meta.xml
<CustomField>
    <fullName>Enabled_To_Ingest__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Define if event is enabled to ingest in the CRM Analytics</description>
    <inlineHelpText>If true event is enabled to Ingest in the CRMA</inlineHelpText>
    <label>Enabled To Ingest</label>
    <type>Checkbox</type>
</CustomField>